--- a/index.html
+++ b/index.html
@@ -1,21 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product - boost your business with us</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product | Boost your business</title>
 
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      size="32x32"
+      href="./img/icons/main-logo.svg"
+    />
+
+    <!-- Modern-normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="noreferrer"
+    />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <header>
+      <div class="container">
+        <nav class="header-nav">
+          <a class="header-logo-link" href="#">
+            <svg class="main-logo" width="40" height="36">
+              <use href="./img/icons.svg#main-logo"></use>
+            </svg>
+            <p>Product</p>
+          </a>
+        </nav>
 
+        <button class="mob-menu-btn" type="button">
+          <svg class="mob-menu-icon" width="28" height="31">
+            <use href="./img/icons.svg#menu"></use>
+          </svg>
+        </button>
+      </div>
     </header>
+
     <main>
+      <section class="hero">
+        <div class="container">
+          <img src="./img/p1-main/hero/hero-mob.png" alt="" class="hero-img" />
+          <h1 class="section-title">Work at the speed of thought</h1>
+          <p class="section-text">
+            Tools, tutorials, design and innovation experts, all in one place!
+            The most intuitive way to imagine your next user experience.
+          </p>
 
+          <ul class="hero-btn-list">
+            <li class="hero-btn-item">
+              <button class="hero-btn get-started-btn" type="button">
+                Get started
+              </button>
+            </li>
+            <li class="hero-btn-item">
+              <button class="hero-btn watch-video-btn" type="button">
+                <svg class="hero-playbtn-icon" width="24" height="24">
+                  <use href="./img/icons.svg#play-btn"></use>
+                </svg>
+                Watch the Video
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="intro">
+        <div class="container">
+          <h2 class="section-title">Product was Built Specifically for You</h2>
+          <ul class="intro-list">
+            <li class="intro-item">
+              <div class="intro-list-icon-wrapper">
+                <svg class="intro-icon" width="18" height="18">
+                  <use href="./img/icons.svg#arrow"></use>
+                </svg>
+              </div>
+              <h3 class="intro-subtitle">First click tests</h3>
+              <p class="intro-subtext">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="intro-item">
+              <div class="intro-list-icon-wrapper">
+                <svg class="intro-icon" width="18" height="18">
+                  <use href="./img/icons.svg#wave"></use>
+                </svg>
+              </div>
+              <h3 class="intro-subtitle">Design surveys</h3>
+              <p class="intro-subtext">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="intro-item">
+              <div class="intro-list-icon-wrapper">
+                <svg class="intro-icon" width="18" height="18">
+                  <use href="./img/icons.svg#heart"></use>
+                </svg>
+              </div>
+              <h3 class="intro-subtitle">Preference tests</h3>
+              <p class="intro-subtext">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="intro-item">
+              <div class="intro-list-icon-wrapper">
+                <svg class="intro-icon" width="18" height="18">
+                  <use href="./img/icons.svg#sand-clock"></use>
+                </svg>
+              </div>
+              <h3 class="intro-subtitle">Five second tests</h3>
+              <p class="intro-subtext">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button class="intro-sign-btn" type="button">Sign up now</button>
+        </div>
+      </section>
+
+      <section class="benefits">
+        <div class="container">
+          <h2 class="section-title visually-hidden">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <picture class="benefits-item-img">
+                <source
+                  media="(min-width: 1400px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-1-desk.png    1x,
+                    ./img/p1-main/benefits/img-1-desk@2x.png 2x
+                  "
+                />
+                <source
+                  media="(max-width: 1399px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-1-mob.png    1x,
+                    ./img/p1-main/benefits/img-1-mob@2x.png 2x
+                  "
+                />
+                <img
+                  class="benefits-item-img"
+                  src="./img/p1-main/benefits/img-1-mob.png"
+                  alt="Stack of folders with files inside"
+                  width="540"
+                  height="500"
+                />
+              </picture>
+              <div class="benefits-conten-wrapper">
+                <h3 class="benefits-item-title">
+                  Effortless Validation for
+                  <span class="benefits-title-accent">Management</span>
+                </h3>
+                <p class="benefits-item-text">
+                  The Myspace page defines the individual, his or her
+                  characteristics, traits, personal choices and the overall
+                  personality of the person.
+                </p>
+                <ul class="benefits-item-plustext-list">
+                  <li class="benefits-plus-item">
+                    <h4 class="benefits-plusitem-subtitle">Accessory makers</h4>
+                    <p class="benefits-plusitem-text">
+                      While most people enjoy casino gambling, sports betting,
+                      lottery and bingo playing for the fun.
+                    </p>
+                  </li>
+                  <li class="benefits-plus-item">
+                    <h4 class="benefits-plusitem-subtitle">Alterationists</h4>
+                    <p class="benefits-plusitem-text">
+                      If you are looking for a new way to promote your business
+                      that won’t cost you more money...
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="benefits-item">
+              <picture class="benefits-item-img">
+                <source
+                  media="(min-width: 1400px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-2-desk.png    1x,
+                    ./img/p1-main/benefits/img-2-desk@2x.png 2x
+                  "
+                />
+                <source
+                  media="(max-width: 1399px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-2-mob.png    1x,
+                    ./img/p1-main/benefits/img-2-mob@2x.png 2x
+                  "
+                />
+                <img
+                  src="./img/p1-main/benefits/img-2-desk.png"
+                  alt="Laptop with open file search"
+                  width="540"
+                  height="500"
+                />
+              </picture>
+              <h3 class="benefits-item-title">
+                Easier decision making for
+                <span class="benefits-title-accent">Customer Support</span>
+              </h3>
+              <p class="benefits-item-text">
+                Effortless Validation for Management Easier decision making for
+                Customer Support Optimisation for Collaborative
+              </p>
+              <ul class="benefits-item-plustext-list customer-support-list">
+                <li class="benefits-plus-item">
+                  <div class="customer-support-icon-wrapper">
+                    <svg width="16" height="12">
+                      <use href="./img/icons.svg#tick"></use>
+                    </svg>
+                  </div>
+                  <p class="benefits-plusitem-text">
+                    Never worry about overpaying for your energy again.
+                  </p>
+                </li>
+                <li class="benefits-plus-item">
+                  <div class="customer-support-icon-wrapper">
+                    <svg width="16" height="12">
+                      <use href="./img/icons.svg#tick"></use>
+                    </svg>
+                  </div>
+                  <p class="benefits-plusitem-text">
+                    We will only switch you to energy companies that we trust
+                    and will treat you right
+                  </p>
+                </li>
+                <li class="benefits-plus-item">
+                  <div class="customer-support-icon-wrapper">
+                    <svg width="16" height="12">
+                      <use href="./img/icons.svg#tick"></use>
+                    </svg>
+                  </div>
+                  <p class="benefits-plusitem-text">
+                    We track the markets daily and know where the savings are.
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="benefits-item">
+              <picture class="benefits-item-img">
+                <source
+                  media="(min-width: 1400px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-3-desk.png    1x,
+                    ./img/p1-main/benefits/img-3-desk@2x.png 2x
+                  "
+                />
+                <source
+                  media="(max-width: 1399px)"
+                  srcset="
+                    ./img/p1-main/benefits/img-3-mob.png    1x,
+                    ./img/p1-main/benefits/img-3-mob@2x.png 2x
+                  "
+                />
+                <img
+                  src="./img/p1-main/benefits/img-3-mob.png"
+                  alt="Folder with images"
+                  width="540"
+                  height="500"
+                />
+              </picture>
+              <h3 class="benefits-item-title">
+                Optimisation for
+                <span class="benefits-title-accent">Collaborative</span>
+              </h3>
+              <p class="benefits-item-text">
+                Effortless Validation for Management Easier decision making for
+                Customer Support Optimisation for Collaborative
+              </p>
+              <ul class="benefits-item-plustext-list">
+                <li class="benefits-plus-item">
+                  <h4 class="benefits-plusitem-subtitle"></h4>
+                  <p class="benefits-plusitem-text"></p>
+                </li>
+                <li class="benefits-plus-item">
+                  <h4 class="benefits-plusitem-subtitle"></h4>
+                  <p class="benefits-plusitem-text"></p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
