Update CSS styles for benefits section and modify HTML content for clarity

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                   "
                 />
                 <img
+                  class="benefits-item-img"
                   src="./img/p1-main/benefits/img-2-desk.png"
                   alt="Laptop with open file search"
                   width="540"
@@ -216,8 +217,9 @@
                 <span class="benefits-title-accent">Customer Support</span>
               </h3>
               <p class="benefits-item-text">
-                Effortless Validation for Management Easier decision making for
-                Customer Support Optimisation for Collaborative
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices and the overall
+                personality of the person.
               </p>
               <ul class="benefits-item-plustext-list customer-support-list">
                 <li class="benefits-plus-item">
@@ -270,6 +272,7 @@
                   "
                 />
                 <img
+                  class="benefits-item-img"
                   src="./img/p1-main/benefits/img-3-mob.png"
                   alt="Folder with images"
                   width="540"
@@ -281,17 +284,24 @@
                 <span class="benefits-title-accent">Collaborative</span>
               </h3>
               <p class="benefits-item-text">
-                Effortless Validation for Management Easier decision making for
-                Customer Support Optimisation for Collaborative
+                Few would argue that, despite the advancements of feminism over
+                the past three decades, women still face a double standard when
+                it comes to their behavior.
               </p>
               <ul class="benefits-item-plustext-list">
                 <li class="benefits-plus-item">
-                  <h4 class="benefits-plusitem-subtitle"></h4>
-                  <p class="benefits-plusitem-text"></p>
+                  <h4 class="benefits-plusitem-subtitle">Accessory makers</h4>
+                  <p class="benefits-plusitem-text">
+                    While most people enjoy casino gambling, sports betting,
+                    lottery and bingo playing for the fun
+                  </p>
                 </li>
                 <li class="benefits-plus-item">
-                  <h4 class="benefits-plusitem-subtitle"></h4>
-                  <p class="benefits-plusitem-text"></p>
+                  <h4 class="benefits-plusitem-subtitle">Alterationists</h4>
+                  <p class="benefits-plusitem-text">
+                    If you are looking for a new way to promote your business
+                    that won’t cost you more money,
+                  </p>
                 </li>
               </ul>
             </li>
