Add showcase section with responsive images and styling

--- a/index.html
+++ b/index.html
@@ -308,6 +308,129 @@
           </ul>
         </div>
       </section>
+
+      <section class="showcase">
+        <div class="container">
+          <h2 class="section-title">Quick & Easy Process</h2>
+          <p class="section-text">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <ul class="showcase-list">
+            <li class="showcase-item">
+              <div class="showcase-item-message-wrapper">
+                <picture class="showcase-message-img">
+                  <source
+                    media="(min-width: 1400px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-1-desk.png    1x,
+                      ./img/p1-main/showcase/img-1-desk@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 1399px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-1-mob.png    1x,
+                      ./img/p1-main/showcase/img-1-mob@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="showcase-message-img"
+                    src="./img/p1-main/showcase/img-1-desk.png"
+                    alt="User photo"
+                    width="98"
+                    height="98"
+                  />
+                </picture>
+                <p class="showcase-message">I can take care of your pitch</p>
+              </div>
+              <div class="showcase-item-message-wrapper">
+                <picture class="showcase-message-img">
+                  <source
+                    media="(min-width: 1400px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-2-desk.png    1x,
+                      ./img/p1-main/showcase/img-2-desk@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 1399px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-2-mob.png    1x,
+                      ./img/p1-main/showcase/img-2-mob@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="showcase-message-img"
+                    src="./img/p1-main/showcase/img-2-desk.png"
+                    alt="User photo"
+                    width="98"
+                    height="98"
+                  />
+                </picture>
+                <p class="showcase-message">I can design you website</p>
+              </div>
+            </li>
+            <li class="showcase-item">
+              <div class="showcase-item-message-wrapper">
+                <picture class="showcase-message-img">
+                  <source
+                    media="(min-width: 1400px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-3-desk.png    1x,
+                      ./img/p1-main/showcase/img-3-desk@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 1399px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-3-mob.png    1x,
+                      ./img/p1-main/showcase/img-3-mob@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="showcase-message-img"
+                    src="./img/p1-main/showcase/img-3-desk.png"
+                    alt="User photo"
+                    width="98"
+                    height="98"
+                  />
+                </picture>
+                <p class="showcase-message">I can help marketing strategy</p>
+              </div>
+              <div class="showcase-item-message-wrapper">
+                <picture class="showcase-message-img">
+                  <source
+                    media="(min-width: 1400px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-4-desk.png    1x,
+                      ./img/p1-main/showcase/img-4-desk@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 1399px)"
+                    srcset="
+                      ./img/p1-main/showcase/img-4-mob.png    1x,
+                      ./img/p1-main/showcase/img-4-mob@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="showcase-message-img"
+                    src="./img/p1-main/showcase/img-4-desk.png"
+                    alt="User photo"
+                    width="98"
+                    height="98"
+                  />
+                </picture>
+                <p class="showcase-message">I can prototype your app</p>
+              </div>
+            </li>
+          </ul>
+          <button type="button" class="showcase-contact-btn">
+            Contact our expert
+          </button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
