--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     height="98"
                   />
                 </picture>
-                <p class="showcase-message">I can help marketing strategy</p>
+                <p class="showcase-message">I can prototype your app</p>
               </div>
               <div class="showcase-item-message-wrapper">
                 <picture class="showcase-message-img">
@@ -422,13 +422,139 @@
                     height="98"
                   />
                 </picture>
-                <p class="showcase-message">I can prototype your app</p>
+                <p class="showcase-message">I can help marketing strategy</p>
               </div>
             </li>
           </ul>
           <button type="button" class="showcase-contact-btn">
             Contact our expert
           </button>
+        </div>
+      </section>
+
+      <section class="articles">
+        <div class="container">
+          <h2 class="section-title">Contents Strategies</h2>
+          <p class="section-text">
+            We focus on ergonomics and meeting you where you work. It's only a
+            keystroke away.
+          </p>
+          <ul class="articles-list">
+            <li class="articles-item">
+              <a class="articles-item-link" href="#">
+                <img
+                  src="./img/p1-main/articles/img-1-desk.jpg"
+                  alt=""
+                  class="articles-item-img"
+                />
+                <p class="articles-item-sign">
+                  By <span class="articles-sign-accent">Wahid Ari</span> | 03
+                  March 2019
+                </p>
+                <h3 class="articles-item-title">
+                  Increasing Prosperity With Positive Thinking
+                </h3>
+              </a>
+            </li>
+            <li class="articles-item">
+              <a class="articles-item-link" href="#">
+                <img
+                  src="./img/p1-main/articles/img-2-desk.jpg"
+                  alt=""
+                  class="articles-item-img"
+                />
+                <p class="articles-item-sign">
+                  By <span class="articles-sign-accent">Wahid Ari</span> | 03
+                  March 2019
+                </p>
+                <h3 class="articles-item-title">
+                  Motivation Is The First Step To Success
+                </h3>
+              </a>
+            </li>
+            <li class="articles-item">
+              <a class="articles-item-link" href="#">
+                <img
+                  src="./img/p1-main/articles/img-3-desk.jpg"
+                  alt=""
+                  class="articles-item-img"
+                />
+                <p class="articles-item-sign">
+                  By <span class="articles-sign-accent">Wahid Ari</span> | 03
+                  March 2019
+                </p>
+                <h3 class="articles-item-title">
+                  Success Steps For Your Personal Or Business
+                </h3>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="price">
+        <div class="container">
+          <h2 class="section-title">Price Table</h2>
+          <p class="section-text">We offer competitive price</p>
+          <ul class="price-list">
+            <li class="price-item">
+              <h3 class="price-item-title">Free</h3>
+              <p class="price-item-text">Brief price description</p>
+              <ul class="price-item-list">
+                <li class="price-item-item">
+                  <div class="price-item-container">0</div>
+                  <div class="price-item-container-text">
+                    <span class="dollar">$</span>
+                    <span class="per-month">Per / month</span>
+                  </div>
+                </li>
+                <li class="price-item-item">
+                  <p class="price-item-descr">
+                    Only 2 Operators Notifications Landing Pages
+                  </p>
+                </li>
+              </ul>
+              <button class="price-button" type="button">Order Now</button>
+            </li>
+            <li class="price-item">
+              <h3 class="price-item-title">Standard</h3>
+              <p class="price-item-text">Brief price description</p>
+              <ul class="price-item-list">
+                <li class="price-item-item">
+                  <div class="price-item-container">5</div>
+                  <div class="price-item-container-text">
+                    <span class="dollar">$</span>
+                    <span class="per-month">Per / month</span>
+                  </div>
+                </li>
+                <li class="price-item-item">
+                  <p class="price-item-descr">
+                    5+ Operators Notifications Landing Pages
+                  </p>
+                </li>
+              </ul>
+              <button class="price-button" type="button">Order Now</button>
+            </li>
+            <li class="price-item">
+              <h3 class="price-item-title">Premium</h3>
+              <p class="price-item-text">Brief price description</p>
+              <ul class="price-item-list">
+                <li class="price-item-item">
+                  <div class="price-item-container">10</div>
+                  <div class="price-item-container-text">
+                    <span class="dollar">$</span>
+                    <span class="per-month">Per / month</span>
+                  </div>
+                </li>
+                <li class="price-item-item">
+                  <p class="price-item-descr">
+                    10+ Operators Notifications Landing Pages
+                  </p>
+                </li>
+              </ul>
+              <button class="price-button" type="button">Order Now</button>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
