--- a/index.html
+++ b/index.html
@@ -509,12 +509,20 @@
                   </div>
                 </li>
                 <li class="price-item-item">
-                  <p class="price-item-descr">
-                    Only 2 Operators Notifications Landing Pages
-                  </p>
+                  <ul class="price-item-descr-list">
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Only 2 Operators</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Notifications</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Landing Pages</p>
+                    </li>
+                  </ul>
                 </li>
               </ul>
-              <button class="price-button" type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
             <li class="price-item">
               <h3 class="price-item-title">Standard</h3>
@@ -528,12 +536,20 @@
                   </div>
                 </li>
                 <li class="price-item-item">
-                  <p class="price-item-descr">
-                    5+ Operators Notifications Landing Pages
-                  </p>
+                  <ul class="price-item-descr-list">
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">5+ Operators</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Notifications</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Landing Pages</p>
+                    </li>
+                  </ul>
                 </li>
               </ul>
-              <button class="price-button" type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
             <li class="price-item">
               <h3 class="price-item-title">Premium</h3>
@@ -547,12 +563,20 @@
                   </div>
                 </li>
                 <li class="price-item-item">
-                  <p class="price-item-descr">
-                    10+ Operators Notifications Landing Pages
-                  </p>
+                  <ul class="price-item-descr-list">
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">10+ Operators</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Notifications</p>
+                    </li>
+                    <li class="price-item-descr-list">
+                      <p class="price-item-descr">Landing Pages</p>
+                    </li>
+                  </ul>
                 </li>
               </ul>
-              <button class="price-button" type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
           </ul>
         </div>
