Add reviews and accent sections with styling and content updates

--- a/index.html
+++ b/index.html
@@ -581,6 +581,186 @@
           </ul>
         </div>
       </section>
+
+      <section class="reviews">
+        <div class="container">
+          <h2 class="section-title">What Clients Say</h2>
+          <p class="section-text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <ul class="reviews-list">
+            <li class="reviews-item">
+              <ul class="reviews-item-stars">
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-empty"></use>
+                  </svg>
+                </li>
+              </ul>
+
+              <p class="review-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="reviewer-container">
+                <img
+                  srcset="
+                    ./img/p1-main/reviews/img-1.png    1x,
+                    ./img/p1-main/reviews/img-1@2x.png 2x
+                  "
+                  src="./img/p1-main/reviews/img-1.png"
+                  alt="Reviewer photo"
+                  class="reviewer-photo"
+                  width="55"
+                  height="55"
+                />
+                <div class="reviewer-info">
+                  <p class="reviewer-name">Wahid Ari</p>
+                  <span class="reviewer-job">Designer</span>
+                </div>
+              </div>
+            </li>
+            <li class="reviews-item">
+              <ul class="reviews-item-stars">
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-empty"></use>
+                  </svg>
+                </li>
+              </ul>
+
+              <p class="review-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="reviewer-container">
+                <img
+                  srcset="
+                    ./img/p1-main/reviews/img-2.png    1x,
+                    ./img/p1-main/reviews/img-2@2x.png 2x
+                  "
+                  src="./img/p1-main/reviews/img-2.png"
+                  alt="Reviewer photo"
+                  class="reviewer-photo"
+                  width="55"
+                  height="55"
+                />
+                <div class="reviewer-info">
+                  <p class="reviewer-name">Wahid Ari</p>
+                  <span class="reviewer-job">FrontEnd</span>
+                </div>
+              </div>
+            </li>
+            <li class="reviews-item">
+              <ul class="reviews-item-stars">
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-full"></use>
+                  </svg>
+                </li>
+                <li>
+                  <svg class="reviews-star-icon" width="18" height="18">
+                    <use href="./img/icons.svg#star-empty"></use>
+                  </svg>
+                </li>
+              </ul>
+
+              <p class="review-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="reviewer-container">
+                <img
+                  srcset="
+                    ./img/p1-main/reviews/img-3.png    1x,
+                    ./img/p1-main/reviews/img-3@2x.png 2x
+                  "
+                  src="./img/p1-main/reviews/img-3.png"
+                  alt="Reviewer photo"
+                  class="reviewer-photo"
+                  width="55"
+                  height="55"
+                />
+                <div class="reviewer-info">
+                  <p class="reviewer-name">Wahid Ari</p>
+                  <span class="reviewer-job">Analys</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="accent">
+        <div class="container">
+          <h2 class="section-title">
+            Join 100 Compannies who boost their business with Product
+          </h2>
+          <button class="accent-button" type="button">Get This</button
+          ><img
+            srcset="./img/accent/screen.png 1x, ./img/accent/screen@2x.png 2x"
+            src="./img/accent/screen.png"
+            alt="Graphics"
+            class="accent-img"
+          />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
