Add footer section with social links and navigation items

--- a/index.html
+++ b/index.html
@@ -762,6 +762,74 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <a class="footer-logo" href="#">
+          <svg class="main-logo" width="40" height="36">
+            <use href="./img/icons.svg#main-logo"></use>
+          </svg>
+          <p>Product</p>
+        </a>
+
+        <ul class="footer-social-links-list">
+          <li class="footer-social-links-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./img/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-links-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./img/icons.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-links-item">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="./img/icons.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <ul class="footer-nav-seite-list">
+                <li class="footer-nav-seite-item active">
+                  <a href="#">Resource</a>
+                </li>
+                <li class="footer-nav-seite-item"><a href="#">About Us</a></li>
+                <li class="footer-nav-seite-item"><a href="#">Blog</a></li>
+                <li class="footer-nav-seite-item"><a href="#">Contact</a></li>
+                <li class="footer-nav-seite-item"><a href="#">FAQ</a></li>
+              </ul>
+            </li>
+            <li class="footer-nav-item">
+              <ul class="footer-nav-policy-list">
+                <li class="footer-nav-policy-item active">
+                  <a href="#">Legal Stuff</a>
+                </li>
+                <li class="footer-nav-policy-item">
+                  <a href="#">Disclaimer</a>
+                </li>
+                <li class="footer-nav-policy-item">
+                  <a href="#">Financing</a>
+                </li>
+                <li class="footer-nav-policy-item">
+                  <a href="#">Privacy Policy</a>
+                </li>
+                <li class="footer-nav-policy-item">
+                  <a href="#">Terms of Service</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
